--- a/index.html
+++ b/index.html
@@ -16,6 +16,41 @@
     </header>
     <!-- Fine Header -->
 
-    <!-- Inizio Parte Centrale -->
+    <!-- Parte Centrale -->
+    <main>
+      <!-- Sezione "le mie spese" -->
+      <hr />
+      <h2>Le mie spese</h2>
+
+      <table>
+        <tr>
+          <td><strong>Numero</strong></td>
+          <td><strong>Descrizione</strong></td>
+          <td><strong>Costo</strong></td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Biglietto Aereo</td>
+          <td>120€</td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Biglietto Aereo</td>
+          <td>120€</td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Biglietto Aereo</td>
+          <td>120€</td>
+        </tr>
+        <tr>
+          <td>Totale</td>
+          <td></td>
+          <td>360€</td>
+        </tr>
+      </table>
+      <!-- Fine Sezione "le mie spese" -->
+    </main>
+    <!-- Fine Parte Centrale -->
   </body>
 </html>
