--- a/index.html
+++ b/index.html
@@ -19,37 +19,64 @@
     <!-- Parte Centrale -->
     <main>
       <!-- Sezione "le mie spese" -->
-      <hr />
-      <h2>Le mie spese</h2>
+      <section>
+        <hr />
+        <h2>Le mie spese</h2>
 
-      <table>
-        <tr>
-          <td><strong>Numero</strong></td>
-          <td><strong>Descrizione</strong></td>
-          <td><strong>Costo</strong></td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>Biglietto Aereo</td>
-          <td>120€</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>Biglietto Aereo</td>
-          <td>120€</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>Biglietto Aereo</td>
-          <td>120€</td>
-        </tr>
-        <tr>
-          <td>Totale</td>
-          <td></td>
-          <td>360€</td>
-        </tr>
-      </table>
+        <table>
+          <tr>
+            <td><strong>Numero</strong></td>
+            <td><strong>Descrizione</strong></td>
+            <td><strong>Costo</strong></td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+          </tr>
+          <tr>
+            <td>Totale</td>
+            <td></td>
+            <td>360€</td>
+          </tr>
+        </table>
+      </section>
       <!-- Fine Sezione "le mie spese" -->
+
+      <!-- Sezione "Cose da fare" -->
+      <section>
+        <hr />
+        <h3>Cose da fare</h3>
+        <ul>
+          <li>
+            Visitare la Tower of London <em><strong>&#10006;</strong></em>
+          </li>
+          <li>
+            Visitare greenwich <em><strong>&#10003;</strong></em>
+          </li>
+          <li>
+            Ascoltare un artista di strada a Covent Garden
+            <em><strong>&#10003;</strong></em>
+          </li>
+          <li>
+            Mangiare il tipico Fish and Chips inglese
+            <em><strong>&#10006;</strong></em>
+          </li>
+        </ul>
+      </section>
+      <!-- Fine Sezione Cose da fare -->
+
+      <!--Sezione "Info tili"-->
     </main>
     <!-- Fine Parte Centrale -->
   </body>
