--- a/index.html
+++ b/index.html
@@ -74,9 +74,47 @@
           </li>
         </ul>
       </section>
-      <!-- Fine Sezione Cose da fare -->
+      <!-- Fine Sezione "Cose da fare" -->
 
       <!--Sezione "Info tili"-->
+      <section>
+        <hr />
+        <h3>Info utili</h3>
+        <ol>
+          <li>
+            Numeri utili di emergenza
+            <ul>
+              <li><strong>999</strong> - Emergenza</li>
+              <li><strong>101</strong> - Numero polizia</li>
+              <li><strong>111</strong> - Numero assistenza medica</li>
+            </ul>
+          </li>
+          <li>
+            Hotel
+            <ul>
+              <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
+              <li>
+                <strong>Indirizzo Hotel:</strong> Westminster, London SW1A 1AA,
+                Regno Unito
+              </li>
+            </ul>
+          </li>
+          <li>
+            Aereo
+            <ul>
+              <li>
+                <strong>Volo di andata:</strong>YI234X, ore 9.30 da Milano
+                Malpensa
+              </li>
+              <li>
+                <strong>Volo di Ritorno:</strong>YI2346, ore 18.30 da London
+                Heathrow
+              </li>
+            </ul>
+          </li>
+        </ol>
+      </section>
+      <!--Fine Sezione "Info tili"-->
     </main>
     <!-- Fine Parte Centrale -->
   </body>
