--- a/index.html
+++ b/index.html
@@ -59,18 +59,16 @@
         <h3>Cose da fare</h3>
         <ul>
           <li>
-            Visitare la Tower of London <em><strong>&#10006;</strong></em>
+            Visitare la Tower of London &#x2718;
           </li>
           <li>
-            Visitare greenwich <em><strong>&#10003;</strong></em>
+            Visitare greenwich &#x2714;
           </li>
           <li>
-            Ascoltare un artista di strada a Covent Garden
-            <em><strong>&#10003;</strong></em>
+            Ascoltare un artista di strada a Covent Garden &#x2714;
           </li>
           <li>
-            Mangiare il tipico Fish and Chips inglese
-            <em><strong>&#10006;</strong></em>
+            Mangiare il tipico Fish and Chips inglese &#x2718;
           </li>
         </ul>
       </section>
